Changed container to container-fluid in layout.jade.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -44,7 +44,7 @@ include mixins/links
       .tools
         block tools
 
-      .container
+      .container-fluid
 
         .row
           if hasSidebar()
