--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,8 +40,8 @@ include mixins/links
                   b &nbsp;#{user.displayName}&nbsp;
                   +anchor('/logout')(title='Become anonymous')
                     i.icon.ion-power
-
-      .tools
+      // disable the .tools row and enable this row later as column.
+      //.tools
         block tools
 
       .container-fluid
@@ -53,8 +53,11 @@ include mixins/links
           else
             .col-md-2
 
-          #main.hide-tools.col-md-8
+          #main.hide-tools.col-md-9
             block content
+          // enable tools row as column here
+          .col-md-1
+            block tools
 
         if hasFooter()
           .row
